--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,9 @@ version: '3'
 
 services:
   app:
-    build: Dockerfile
+    build:
+      context: .
+      dockerfile: Dockerfile
     image: mu-documentation
     ports:
       - "3123:3123"
